edited CaseStudy paper ch 3, section 3.3 adn 3.4- CH

--- a/caseStudyWP/03-chap3.Rmd
+++ b/caseStudyWP/03-chap3.Rmd
@@ -62,22 +62,30 @@ The scale sampling is incomplete as there are years without any scales, others w
 
 ## CU Status Estimation
 
+<!--CH suggestion: "We recommend assessing status using the multi-dimensional approach when identifying proportional-based LRPs, and demonstrate two alternative approaches for comparison. In total, these approaches are:"--> <!--CH: I thought of putting this upfront to relay Sue's concerns about showing all methods on equal footing being confusing given her work.-->
 We consider three alternative ways to characterize CU status when developing LRPs for Interior Fraser Coho:
 
-1) Multi-dimensional rapid status assessment
-2) CU-level abundance relative to $S_{gen}$
-3) Distribution related to IFCRT-distributional target
+1) Multi-dimensional rapid status assessment <!--CH: "Rapid Multidimenstional Scanner Tool (see Section \@ref(#rapidToolMethods)"- is the this official name?-->
+2) CU-level abundance relative to $S_{gen}$<!--CH: ", lower benchmark on abundances"-->
+3) Distribution related to IFCRT-distributional target<!--CH: "3) Distribution of spawning relative to distributional targets developed by Interior Fraser Conservation Recovery Team (20??)"- unless you've already defined IFCRT above--> 
 
+<!--CH comment: I've suggested the text above to replace the first two sentences below. The third sentence could be revised to, "For aggregate-abundance based methods, both second and third approaches are applied". However, if we're applying the third approach outside of a fully integrated assessment (e.g., in logisitic-regression LRP), why can't we apply the first approach?. I think only the 2nd approach is used for projection-based LRPS, correct? -->
 The first approach uses the multidimensional rapid scanning tool developed by the State of the Salmon program (Section \@ref(#rapidToolMethods)). This method is used when developing proportion-based LRPs. In comparison, both the second and third approaches are primarily used when developing aggregate abundance-based LRPs. 
 
 The second approach is based on comparing the current abundance of each CU to its CU-specific estimate of $S_{gen}$, where CU status is considered poor when abundance drops below $S_{gen}$. The value of $S_{gen}$ represents the number of spawners required to recover to $S_{MSY}$ (spawners maximum sustainable yield) within one generation, under equilibrium conditions in the absence of fishing [@holt_indicators_2009]. $S_{gen}$ is one of several benchmarks available for assigning mutlidimensional CU status in WSP Integrated Status Assessments; it represents a lower benchmark between red and amber status zones and was used as part of the 2014 Integrated Status Assessment for Interior Fraser Coho [@dfoWildSalmonPolicy2015].    
 
-The third approach is based on the distribution of spawning escapement among subpopulations nested within CUs (Table \@ref(tab:cohoCU2SP)). We apply this approach for Interior Fraser Coho to maintain consistency with previous recovery planning processes for this SMU (@ifcrtinteriorfrasercohorecoveryteamConservationStrategyCoho2006, @arbeiderInteriorFraserCoho2020). Since the distributional target we use was initially developed by the Interior Fraser Coho Recovery Team in 2006, we refer to it as "IFCRT distributional". Specifically, we use the IFCRT's short-term recovery objective that the 3-year average escapement in at least half of the sub-populations within each of the five CUs is to exceed 1,000 wild-origin spawning coho salmon, excluding hatchery fish spawning in the wild. We selected the short-term recovery target to represent poor CU status in our case study (e.g., below a lower benchmark) because, as noted by @arbeiderInteriorFraserCoho2020, the short-term target was designed as an immediate target when the population was endangered. As such, it was interpreted as a level expected to prevent extinction or loss of genetic diversity.  Note that our decision to maintain this metric as part of our current evaluation does not necessarily mean we are recommending it as a an option for identifying LRPs for this SMU. See Holt et al. (in review) for a detailed guidelines on which benchmarks should be considered for different contexts.
+The third approach is based on the distribution of spawning escapement among subpopulations nested within CUs (Table \@ref(tab:cohoCU2SP)). We apply this approach for Interior Fraser Coho to maintain consistency with previous recovery planning processes for this SMU (@ifcrtinteriorfrasercohorecoveryteamConservationStrategyCoho2006, @arbeiderInteriorFraserCoho2020). Since the distributional target we use was initially developed by the Interior Fraser Coho Recovery Team in 2006, we refer to it as "IFCRT distributional". Specifically, we use the IFCRT's short-term recovery objective that the 3-year average escapement in at least half of the sub-populations within each of the five CUs is to exceed 1,000 wild-origin spawning coho salmon, excluding hatchery fish spawning in the wild. We selected the short-term recovery target to represent poor CU status in our case study (e.g., below a lower benchmark) because, as noted by @arbeiderInteriorFraserCoho2020, the short-term target was designed as an immediate target when the population was endangered. As such, it was interpreted as a level expected to prevent extinction or loss of genetic diversity.  <!--CH: perhaps reword the following sentence to "We have included this third approach to defining CU status to demonstrate the range of approaches and metrics that can be used, and to demonstrate sensitivity of the LRP to choice of metrics for assigning CU-status.  Future iterations of the multidimensional approach could include distributional metrics such as those used in approach (3)."  -->  
+
+<!--CH: I'm conflicted on any recommnendation here. I'm not sure we can recommend approach (2) over (3) if we haven't considered (1) in the aggregate-abundance LRPs. If we recommend that further local expertise is required to choose the appropriate CU-status (e.g, 2 vs 3), I think Sue would argue that the experts have already agreeed  on approach (1)! -->  
+
+<!--CH: So, can we re-run aggregate-abundance LRPs using logistic regression with multidimesional status?-->
+
+Note that our decision to maintain this metric as part of our current evaluation does not necessarily mean we are recommending it as a an option for identifying LRPs for this SMU. See Holt et al. (in review) for a detailed guidelines on which benchmarks should be considered for different contexts.
 
 
 ### Estimation of Sgen{#cohoSgen}
 
-Estimates of Sgen are required when assessing CU status using both the multi-dimensional rapid scanning tool and the comparisson of current CU-level abundance to $S_{gen}$. Two different formulations of stock recruitment model were used to estimate $S_{gen}$: (i) a base Ricker model, which includes a marine survival covariate, and (ii) a Ricker_prioCap model in which an informative prior distribution is used to increase SRep compared to the base model. SRep is the spawner abundance level at which the stock replaces itself; the relationship between SRep and Ricker stock recuit model parameters is shown below. Both of these models have been previously developed and applied to Interior Fraser Coho CUs. A third Ricker model, in which both an informative prior on SRep  <!--$S_{REP}$ --> and depensatory mortality were included, was also used by @kormanEvaluationFrameworkAssessing2019 and @arbeiderInteriorFraserCoho2020; however, we did not include it in our case study in order to simplify our analysis.   
+Estimates of Sgen are required when assessing CU status using both the multi-dimensional rapid scanning tool <!--CH: "Rapid Multidimenstional Scanning Tool"-->and the comparisson of current CU-level abundance to $S_{gen}$. Two different formulations of stock recruitment model were used to estimate $S_{gen}$: (i) a base Ricker model, which includes a marine survival covariate, and (ii) a Ricker_prioCap model in which an informative prior distribution is used to increase  $S_{REP}$ compared to the base model. $S_{REP}$ is the spawner abundance level at which the stock replaces itself; the relationship between $S_{REP}$ and Ricker stock recuit model parameters is shown below. Both of these models have been previously developed and applied to Interior Fraser Coho CUs. A third Ricker model, in which both an informative prior on $S_{REP}$  and depensatory mortality were included, was also used by @kormanEvaluationFrameworkAssessing2019 and @arbeiderInteriorFraserCoho2020; however, we did not include it in our case study in order to simplify our analysis.  <!--CH: is there any biological reason why we care less about that 3rd model? Any reason why Korman et al or Arbeider et al. thought it was perhaps less feasible?-->
 
 <!-- CW: Perhaps this was already done in @kormanEvaluationFrameworkAssessing2019 or @arbeiderInteriorFraserCoho2020, but it may be good to explain that the marine survival covariate is the based on data from hatchery indicator stocks and because of that they are not CU specific. or are they? -->
 
@@ -160,8 +168,10 @@ knitr::include_graphics("figure/coho-compareSRFits-IM.png")
 
 We looked at the proportion of CUs that had multi-dimensional rapid status assessments above the red zone to determine in which years between 1998 and 2020 the LRP would have been breached. Status was assessed as being below the LRP in years in which one or more CUs assessed as having red status. Both Ricker model formulations described above were used to estimate relative abundance-based benchmarks (lower benchmark \= $S_{gen}$ and upper benchmark \= 0.8$S_{MSY}$) when assessing multi-dimensional rapid status: the base Ricker model and the Ricker_priorCap model. Estimates of $S_{gen}$ and $S_{MSY}$ were made using all data available up to 2020, so our evaluation is not a true retrospective analysis in which only the data available up to each year in a time series are used to estimate status.
 
-<!--This last sentence above is confusing with the full retrospective analysis presented later
-Remove: Estimates of $S_{gen}$ and $S_{MSY}$ were made using all data available up to 2020, so our evaluation is not a true retrospective analysis in which only the data available up to each year in a time series are used to estimate status. -->
+<!--CW: This last sentence above is confusing with the full retrospective analysis presented later
+Remove: Estimates of $S_{gen}$ and $S_{MSY}$ were made using all data available up to 2020, so our evaluation is not a true retrospective analysis in which only the data available up to each year in a time series are used to estimate status. 
+CH: I agree, but think we could include the first phrase. e.g., "For this analysis for proportional-based LRPs, estimates of $S_{gen}$ and $S_{MSY}$ were made using all data available up to 2020".
+-->
 
 For comparison, we also looked at the proportion of CUs that were below $S_{gen}$ in each year and the proportion of CUs that failed to meet the IFCRT distributional target of at least half of all sub-populations within each CU having more than 1000 spawners.  
 
@@ -169,7 +179,10 @@ For comparison, we also looked at the proportion of CUs that were below $S_{gen}
 
 Estimates of $S_{gen}$ based on the Ricker_priorCap model were higher than those based on the base Ricker model for four of the five CUs (Middle Fraser, Lower Thompson, North Thompson, and South Thompson) and were approximately equal for the fifth CU (Fraser Canyon; Appendix ...). As a result, generational average spawning abundances  was more likely to drop below $S_{gen}$ when it was estimated using the Ricker_priorCap. Under the base Ricker model formulation, generational average spawning abundance remained above $S_{gen}$ for all years between 2000 and 2020 (Figure \@ref(fig:coho-CU-multiDim-Ricker)).  In comparison, under the Ricker_priorCap formulation, generational average abundance dropped below $S_{gen}$ in one or more years for Lower Thompson CU (2006), Middle Fraser CU (2006, 2008), and South Thompson CU (2000, 2006, 2007, 2015; Figure \@ref(fig:coho-CU-multiDim-Ricker-Cap)). As a result, at least one CU had stock status assessed as below $S_{gen}$ for 5 of the 21 years between 2000 and 2020.
 
-When CU status was assessed using the multidimensional scanning tool with abundance-based benchmarks based on $S_{gen}$ and 0.8$S_{MSY}$ used as inputs, CU status was always assessed as red for years in which the generational average spawning abundance dropped below $S_{gen}$, regardless of which stock recruit model was used to estimate benchmarks (Figures \@ref(fig:coho-CU-multiDim-Ricker), \@ref(fig:coho-CU-multiDim-Ricker-Cap)). This result occurs because because according to the  multidimensional decision tree (Figure \@ref(fig:decision-tree), status is derived from abundance-based benchmarks in most years, which means that being below $S_{gen}$ is most often the trigger for a red CU status assessment. An exception to this occurs in the Fraser Canyon CU in years 2015-2017.  In these years, the generational average of absolute spawning abundance is < 1500 spawners, which means that the CU is assigned red status under the first node of the decision tree even though spawning abundances are above $S_{gen}$ (Figure \@ref(fig:decision-tree)). As a result, when multidimensional status was assessed using abundance-based benchmarks estimated from the base Ricker model, a proportion-based LRP for the SMU would have been breached in 3 of 21 years (2015-2017) based on Fraser Canyon spawning abundances dropping below 1500 spawners in theses years.  When mutlidimensional status was assessed using abundance-based benchmarks from the Ricker-priorCap model, a proportion-based LRP would have been breached in 7 of 21 years (2000, 2006-2008, 2015-2017) based on a combination of spawning abundances < 1500 in the Fraser Canyon CU and spawning abundances < $S_{gen}$ in other CUs. Multidimensional status based on the rapid screening tool was above red for all CUs in the most recent year, 2020, indicating that the SMU is currently above a proportion-based LRP.
+When CU status was assessed using the multidimensional scanning tool with lower and upper abundance-based benchmarks based on $S_{gen}$ and 0.8$S_{MSY}$ as inputs, CU status was always assessed as red for years in which the generational average spawning abundance dropped below $S_{gen}$, regardless of which stock recruit model was used to estimate benchmarks (Figures \@ref(fig:coho-CU-multiDim-Ricker), \@ref(fig:coho-CU-multiDim-Ricker-Cap)). This result occurs because according to the  multidimensional decision tree (Figure \@ref(fig:decision-tree), status is derived from abundance-based benchmarks in most years, which means that being below $S_{gen}$ is most often the trigger for a red CU status assessment. An exception occurs in the Fraser Canyon CU in years 2015-2017.  In these years, the generational average of absolute spawning abundance is < 1500 spawners and CU is assigned red status under the first node of the decision tree even though spawning abundances are above $S_{gen}$ (Figure \@ref(fig:decision-tree)). As a result, when multidimensional status was assessed using abundance-based benchmarks estimated from the base Ricker model, a proportion-based LRP for the SMU would have been breached in 3 of 21 years (2015-2017) based on Fraser Canyon spawning abundances dropping below 1500 spawners in theses years <!--CH: I think it's helpful to refer to figure 3.3 here of CUspecific time-series-->.  When multidimensional status was assessed using abundance-based benchmarks from the Ricker-priorCap <!--CH: Ricker_priorCap or Ricker-priorCap?--> model, a proportion-based LRP would have been breached in 7 of 21 years (2000, 2006-2008, 2015-2017) based on a combination of spawning abundances < 1500 in the Fraser Canyon CU and spawning abundances < $S_{gen}$ in other CUs <!--CH; refer to figure 3.4 here-->. Multidimensional status based on the rapid screening tool was above red for all CUs in the most recent year, 2020, indicating that the SMU is currently above a proportion-based LRP.
+
+<!--CH suggest adding: "Overall, the proportion of CUs with red status differed between the multidimensional approach and the single metric, spawner abundances relative to lower benchmarks in only 2 or 3 of 21 years, depending on the Ricker model formulation. The proportion of CUs with red status was more sensitive to Ricker model formulation than to if the multi-dimensional or single metric approach was applied." Is this all true? -->
+
 
 ```{r coho-CU-multiDim-Ricker, fig.cap="Escapement time series for five Interior Fraser Coho CUs shown as annual escapements (lines) and 3-year geometric mean escapements (dots). Grey dots indicate years in which all CUs had multidimensional rapid status assessments above red when Sgen was estimated using the Ricker model, while red dots indicate years in which one or more CUs had multi-dimensional status assessments in the red zone, which would trigger a breach of the LRP. Solid orange lines show estimates of Sgen from the Ricker model for comparison.", warning=FALSE, echo=FALSE, fig.align="center"}
 knitr::include_graphics("figure/coho-CU-EscpSeries-wMultiStatus-Ricker.png")
@@ -189,7 +202,7 @@ knitr::include_graphics("figure/coho-Subpop-EscpSeries-wStatus.png")
 ## LRP Estimation: Aggregate Abundance Logistic Regression LRPs 
 ### Methods
 
-We evaluated aggregate abundance-based LRPs derived using logistic regressions with two of the Interior Fraser Coho benchmark considered: $S_{gen}$ and the IFCRT-distributional target. Because two different spawner recuit models were used to estimate $S_{gen}$, we distinguish these models as 'Sgen:LRP' and 'Sgen_priorCap:LRP' for the Ricker and Ricker_priorCap models, respectively. See Section \@ref(logisticMethods) for an overview of the approach used to calculate aggregate abundance-based LRPs using logistic regression.
+We evaluated aggregate abundance-based LRPs derived using logistic regressions with two of the Interior Fraser Coho benchmarkS considered<!--Is it too much to consider the multidimensional approach too? It's hard to justify why we excluded it-->: $S_{gen}$ and the IFCRT-distributional target. Because two different spawner recuit models were used to estimate $S_{gen}$, we distinguish these models as 'Sgen:LRP' and 'Sgen_priorCap:LRP' for the Ricker and Ricker_priorCap models, respectively. See Section \@ref(logisticMethods) for an overview of the approach used to calculate aggregate abundance-based LRPs using logistic regression.
 
 When estimating logistic regression LRPs using $S_{gen}$, we used an integrated modelling approach in which CU-level $S_{gen}$ and the SMU-level LRP were simultaneously estimated. The integrated Sgen-LRP models had two components: 
 (i)	Stock-recruit models fit to each of the 5 CUs to estimate CU-level Sgen (Equation \@ref(eq:rickerSurv-IM) and Equations \@ref(eq:adjProd) - \@ref(eq:Sgen)) <!-- Eq adjProd not  found-->
